src/game_state/action/snapshots/sleeping_gods__game_state__action__take_ship_action__test__bridge_action.snap
---
source: src/game_state/action/take_ship_action.rs
expression: result.unwrap()
---
{
  "phase": {
    "EventPhase": null
  },
  "players": [
    {
      "command_tokens": 3,
      "hand": [
        {
          "name": "Counsel",
          "deck_ix": 3
        }
      ]
    }
  ],
  "crew": [
    {
      "name": "Rafael Vieira",
      "fatigue": 0,
      "damage": 0,
      "skills": {
        "Craft": 1,
        "Perception": 0,
        "Savvy": 0,
        "Strength": 1,
        "Wits": 0
      },
      "equipped_ability_cards": []
    },
    {
      "name": "Audrie Williams",
      "fatigue": 0,
      "damage": 0,
      "skills": {
        "Craft": 1,
        "Perception": 1,
        "Savvy": 0,
        "Strength": 0,
        "Wits": 0
      },
      "equipped_ability_cards": []
    },
    {
      "name": "Katsumi Aoshima",
      "fatigue": 0,
      "damage": 0,
      "skills": {
        "Craft": 0,
        "Perception": 1,
        "Savvy": 1,
        "Strength": 0,
        "Wits": 1
      },
      "equipped_ability_cards": []
    },
    {
      "name": "Kannan Sharma",
      "fatigue": 0,
      "damage": 0,
      "skills": {
        "Craft": 0,
        "Perception": 0,
        "Savvy": 1,
        "Strength": 1,
        "Wits": 1
      },
      "equipped_ability_cards": []
    },
    {
      "name": "Sofi Odessa",
      "fatigue": 0,
      "damage": 0,
      "skills": {
        "Craft": 1,
        "Perception": 1,
        "Savvy": 1,
        "Strength": 1,
        "Wits": 1
      },
      "equipped_ability_cards": []
    },
    {
      "name": "Gregory Little",
      "fatigue": 0,
      "damage": 0,
      "skills": {
        "Craft": 0,
        "Perception": 0,
        "Savvy": 1,
        "Strength": 1,
        "Wits": 0
      },
      "equipped_ability_cards": []
    },
    {
      "name": "Laurant Lapointe",
      "fatigue": 0,
      "damage": 0,
      "skills": {
        "Craft": 1,
        "Perception": 1,
        "Savvy": 1,
        "Strength": 1,
        "Wits": 0
      },
      "equipped_ability_cards": []
    },
    {
      "name": "Marco Reyes",
      "fatigue": 0,
      "damage": 0,
      "skills": {
        "Craft": 0,
        "Perception": 0,
        "Savvy": 0,
        "Strength": 1,
        "Wits": 1
      },
      "equipped_ability_cards": []
    }
  ],
  "map": {
    "ship_area": 1,
    "adjacent_areas": [
      2,
      4,
      6
    ],
    "visible_areas": [
      1,
      3,
      2,
      4,
      6
    ],
    "current_region": 1
  },
  "room": "Bridge",
  "resources": {
    "coins": 0,
    "grain": 0,
    "meat": 0
  },
  "message_queue": [
    {
      "GainCommandPoints": {
        "amount": 3
      }
    },
    {
      "DrewAbilityCard": {
        "card": {
          "name": "Counsel",
          "deck_ix": 3
        }
      }
    }
  ]
}
